# cmsc858D

./: README.md
benchmarks/: bv_results.txt  rank_select_wavelet_trees.ipynb  rs_results_big.txt  rs_results_small.txt  wt_access_results.txt
benchmarks/.ipynb_checkpoints/: rank_select_wavelet_trees-checkpoint.ipynb
benchmarks/bloom_filter/: bf_bench_results.tsv  bf_bench_results_tiny_fpr.tsv  bf_benchmark.ipynb
benchmarks/wt/: rank_select_wavelet_trees.ipynb  wt_rank_results.txt  wt_select_results.txt  wt_sigma_results.txt
succinct/: .gitignore  Cargo.toml  README.md  build_zip_bins.sh  select.txt
succinct/examples/: README.md
succinct/examples/bf/: queries.txt
succinct/examples/tomorrow/: input.txt  rank.txt  select.txt
succinct/src/: bloom_filter.rs  bv.rs  lib.rs  main.rs  math.rs  rank_select.rs  rank_select.rs.tmp  wt.rs
succinct_plots/: Rank asymptotics.ipynb  rs_results.txt  sel_results.txt
succinct_plots/.ipynb_checkpoints/: Rank asymptotics-checkpoint.ipynb
