[package]
name = "succinct"
version = "0.1.0"
authors = ["Jason Fan <jasonfan@cs.umd.edu>"]
edition = "2018"

default-run = "wt"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
#opt-level = 3

[profile.release]
#opt-level = 3

[dependencies]
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
csv = "1.1.1"